--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel": "^5.8.20",
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
+    "debug": "^2.2.0",
     "eslint": "^1.0.0",
     "mocha": "^2.2.5",
     "uglifyjs": "^2.4.10",
