--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "lint": "npm run eslint",
     "test": "npm run mocha",
-    "watch": "babel ./lib/jsoon.es -d ./ -w --blacklist strict",
-    "build": "npm run eslint && npm run babel && npm run browserify && npm run uglify && npm run test",
+    "watch": "babel ./src/jsoon.es -o ./lib/jsoon.js -w --blacklist strict",
+    "build": "rm -rf ./dist/* ./lib/* && npm run eslint && npm run babel && npm run browserify && npm run uglify && npm run test",
     "-----": "----------------------------------------------------------------",
-    "eslint": "eslint ./lib/*.es",
+    "eslint": "eslint ./src/*.es",
     "mocha": "mocha test/tests.js",
-    "babel": "babel ./lib/jsoon.es -d ./ --blacklist strict",
-    "browserify": "browserify -e lib/jsoon.js -o jsoon.js -s jsoon",
-    "uglify": "uglifyjs jsoon.js -o jsoon.min.js --comments"
+    "babel": "babel ./src/jsoon.es -o ./lib/jsoon.js --blacklist strict",
+    "browserify": "browserify -e lib/jsoon.js -o dist/jsoon.js -s jsoon",
+    "uglify": "uglifyjs ./dist/jsoon.js -o ./dist/jsoon.min.js --comments"
   },
   "repository": {
     "type": "git",
