--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "jsoon",
   "version": "0.0.2",
   "description": "JSON query engine",
+  "files": [
+    "README.md",
+    "index.js",
+    "lib"
+  ],
   "scripts": {
-    "lint": "npm run eslint",
-    "test": "npm run mocha",
-    "watch": "babel ./src/jsoon.es -o ./lib/jsoon.js -w --blacklist strict",
-    "build": "rm -rf ./dist/* ./lib/* && npm run eslint && npm run babel && npm run browserify && npm run uglify && npm run test",
+    "lint": "eslint ./src/*.es",
+    "test": "mocha tests/tests.js",
+    "start:dev": "http-server & babel src/jsoon.es -o lib/jsoon.js -w & watchify src/jsoon.es -o dist/jsoon.js -t babelify -s jsoon -v",
+    "build": "npm run clean && npm run lint && npm run babel && npm run browserify && npm run uglify && npm run test",
     "-----": "----------------------------------------------------------------",
-    "eslint": "eslint ./src/*.es",
-    "mocha": "mocha test/tests.js",
-    "babel": "babel ./src/jsoon.es -o ./lib/jsoon.js --blacklist strict",
-    "browserify": "browserify -e lib/jsoon.js -o dist/jsoon.js -s jsoon",
-    "uglify": "uglifyjs ./dist/jsoon.js -o ./dist/jsoon.min.js --comments"
+    "clean": "rimraf lib && rimraf dist && mkdirp dist && mkdirp lib",
+    "babel": "babel src/jsoon.es -o lib/jsoon.js",
+    "browserify": "browserify src/jsoon.es -o dist/jsoon.js -t babelify -s jsoon",
+    "uglify": "uglifyjs dist/jsoon.js -cm --comments -o dist/jsoon.min.js"
   },
   "repository": {
     "type": "git",
@@ -29,13 +33,17 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel": "^5.8.20",
-    "browserify": "^11.0.1",
+    "babel": "^5.8.23",
     "chai": "^3.2.0",
-    "debug": "^2.2.0",
-    "eslint": "^1.0.0",
-    "mocha": "^2.2.5",
-    "uglifyjs": "^2.4.10",
-    "watch": "^0.16.0"
+    "eslint": "^1.3.1",
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.3.0",
+    "rimraf": "^2.4.2",
+    "uglify-js": "^2.4.24",
+    "watch": "^0.16.0",
+    "watchify": "^3.4.0"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
   }
 }
